Build: Publish dated releases to Clojars as com.leifericf/clj-zig